--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
   <h1>欢迎来到我的网页</h1>
   <p>这是一个简单的 HTML 页面示例。</p>
-  <img src="http://211.159.224.43:5244/d/Aliyun/EDEN/111124804_p0.png?sign=jq_xdgTxoQcv8uclKAjfPYVEonxE6Ih5585uUUQjtF8=:0" alt="图片描述">
+  <img src="http://211.159.224.43:5244/d/Aliyun/EDEN/111124804_p0.png?sign=jq_xdgTxoQcv8uclKAjfPYVEonxE6Ih5585uUUQjtF8=:0" alt="图片">
   <ul>
     <li>项目1</li>
     <li>项目2</li>
